# applyloop

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
applyloop/: config.py  llm.py  pipeline.py  settings.py  worker.py
applyloop/db/: models.py  session.py
applyloop/discovery/: ashby.py  dates.py  greenhouse.py  html_text.py  ingest.py  lever.py  types.py  workable.py
applyloop/scoring/: scorer.py
applyloop/web/: app.py
applyloop/web/templates/: base.html  feed.html
config/: companies.yaml.example  preferences.yaml.example  profile.yaml.example
docs/superpowers/plans/: 2026-07-22-milestone-1-job-feed.md  2026-07-23-claude-code-backend.md
docs/superpowers/specs/: 2026-07-22-applyloop-design.md
tests/: test_config.py  test_html_text.py  test_ingest.py  test_llm.py  test_models.py  test_pipeline.py  test_pollers_ashby_workable.py  test_pollers_greenhouse_lever.py  test_scaffold.py  test_scorer.py  test_web.py  test_worker.py
