[project]
name = "applyloop"
version = "0.1.0"
description = "Self-hosted AI job application system: discover, score, tailor, approve, apply, track."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "apscheduler>=3.10,<4",
    "anthropic>=0.34",
]

[project.scripts]
applyloop-worker = "applyloop.worker:main"
applyloop-web = "applyloop.web.app:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["applyloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
